commit message for buyerSimpleHeader

--- a/public/assests/css/displayJob.styles.css
+++ b/public/assests/css/displayJob.styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    color: #000000 !important;
+    /* color: #000000 !important; */
 }
 
 .displayJobContainer {
