--- a/public/assests/css/order.styles.css
+++ b/public/assests/css/order.styles.css
@@ -66,7 +66,7 @@ header{
     height: 500px;
 }
 .userActivity .tabContent{
-    padding: 16px 32px;
+    padding: 16px 16px 16px 0;
 }
 .userActivity p{
     text-align: justify;
@@ -132,13 +132,13 @@ header{
     line-height: 120%;
     font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-.orderDetails .orderStatus{
+.orderDetails .orderState{
     height: 72px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.orderDetails .orderStatusHeader{
+.orderDetails .orderStateHeader{
     background-color: #c5c6c9;
     border-radius: 8px;
     height: fit-content;
