commit message for 17/04/2024

--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -394,9 +394,9 @@ input[type = "text"], textarea, select{
     justify-content: space-between;
 }
 
-.seller-modal-name{
+/* .seller-modal-name{
 
-}
+} */
 
 .seller-name{
     font-size:32px;
