--- a/public/assests/css/complaints.styles.css
+++ b/public/assests/css/complaints.styles.css
@@ -465,13 +465,14 @@ nav.close ~ .dashboard .top{
 
 .content-table {
     border-collapse: collapse;
-    margin: 0 auto;
+    margin-left: 15%;
     font-size: 0.9em;
-    min-width: 400px;
+  
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    align-items: center;
+    display: inline-block;
+    justify-content: space-around;
 }
 
 .content-table thead tr {
