--- a/public/assests/css/chat.styles.css
+++ b/public/assests/css/chat.styles.css
@@ -10,6 +10,7 @@ body{
 }
 .wrapper{
     display: flex;
+    justify-content: space-between;
     gap: 16px;
     margin: 32px 16px;
     height: calc(100vh - 124px);
@@ -19,7 +20,9 @@ body{
 
 /*Right Container*/
 .userList{
-    border: 2px solid #c5c6c9;
+    border: 2px solid #333;
+    background-color: #fff;
+    border-radius: 8px;
     width: 25%;
     overflow-y: scroll;
 }
@@ -39,6 +42,184 @@ body{
 
 
 /*Middle Container */
+/* Chat Section */
+
+.chat{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 16px;
+    width: 50%;
+    border: 2px solid #333;
+    background-color: #fff;
+    border-radius: 8px;    height: 100%;
+}
+
+/*chat header*/
+.chat .header{
+    height: 5%;
+    border-bottom: 2px solid #333;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+}
+.chat .receiver{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.chat .receiver .dot{
+    height: 24px;
+    width: 24px;
+    border-radius: 100%;
+    margin-right: 6px;
+}
+.chat .receiver img{
+    height: 48px;
+    width: 48px;
+    border-radius: 100%;
+    object-fit: cover;
+    padding: 2px;
+    margin-right: 6px;
+}
+.receiver .receiverActive{
+    background-color: #1dbf73;
+}
+.receiver .receiverOffline{
+    background-color: crimson;
+}
+.receiver .upperSection{
+    display: flex;
+    align-items: center;
+}
+.receiver .rightSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.receiver h1{
+    font-size: 18px;
+    line-height: 100%;
+
+} 
+.receiver a{
+    color: #404145;
+    text-decoration: underline;
+}
+
+/*Messages*/
+.chat .innerContainer{
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding: 16px 16px 32px 16px;
+    -ms-overflow-style: none;  
+    scrollbar-width: none; 
+}
+.innerContainer::-webkit-scrollbar { 
+    display: none;  
+}
+.messageContainer {
+    width: fit-content;
+    max-width: 70%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    background-color: #f1f1f1;
+    border: 1px solid #dedede;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+}
+.darker {
+    float: right;
+    border-color: #ccc;
+    background-color: #ddd;
+}
+P{
+    display: flex;
+    flex-direction: column;
+}
+.innerContainer .senderContent{
+    display: flex;
+    align-items: center;
+}
+.innerContainer .senderContent img{
+    margin-right: 16px;
+
+}
+.innerContainer .receiverContent{
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+.innerContainer .receiverContent img{
+    margin-left: 16px;
+}
+.messageContainer::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+.messageContainer img {
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+.time-right {
+    color: #aaa;
+}
+.time-left {
+    display: flex;
+    justify-content: end;
+    color: #999;
+}
+
+
+/*chat footer*/
+.chat .chatFooter{
+    height: 8%;
+    border-top: 2px solid #333;
+    padding-top: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+}.chatFooter form{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 8px;
+}
+.chatFooter .attachement input{
+    display: none;
+}
+.chatFooter .attachement label{
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    padding: 8px;
+    border: 2px solid #333;
+    border-radius: 8px;
+}
+.chatFooter .attachement svg{
+    height: 20px;
+    width: 20px;
+    color: #333;
+}
+.chatFooter .inputMessage{
+    width: 90%;
+}
+.chatFooter .inputMessage input{
+    border: 2px solid #333;
+    border-radius: 8px;
+}
+
+
 
 /*Left Container*/
 .receiverInfo{
@@ -46,7 +227,9 @@ body{
     padding: 16px 16px 0 16px;
     display: flex;
     flex-direction: column;
-    border: 2px solid #c5c6c9;
+    border: 2px solid #333;
+    background-color: #fff;
+    border-radius: 8px;
     width: 25%;
 }
 .receiverInfo .info{
