--- a/public/assests/css/chat.styles.css
+++ b/public/assests/css/chat.styles.css
@@ -164,6 +164,7 @@ P{
     display: table;
 }
 .messageContainer img {
+    padding: 0px !important;
     width: 48px;
     height: 48px;
     border-radius: 100%;
