--- a/public/assests/css/editSellerProfile.styles.css
+++ b/public/assests/css/editSellerProfile.styles.css
@@ -61,50 +61,6 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .add{
     text-decoration: none;
     display: inline-block;
@@ -202,7 +158,7 @@ body{
 }
 
 
-.innerContainer{
+.editSellerProfile_MainContainer .innerContainer{
     display: flex;
     justify-content: center;
     align-items: center;
