--- a/public/assests/css/addGig.styles.css
+++ b/public/assests/css/addGig.styles.css
@@ -114,7 +114,6 @@ input.invalid {
   display: block;
 }
 
-
 .addGigContainer .rightContainer button{
     display: inline-block;
     border-radius: 4px;
@@ -192,7 +191,7 @@ input.invalid {
   margin-bottom: 0 !important;
   border-radius: 4px !important;
   width: 100%;
-  height: 100% !important;
+  height: 100%;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
