--- a/public/assests/css/updateGig.styles.css
+++ b/public/assests/css/updateGig.styles.css
@@ -53,7 +53,7 @@
     padding: 16px;
     box-sizing: border-box;
     border-radius: 5px;
-    height: 100%;
+    height: calc(100vh);
     width: 100%;
     background-color: #ffffff;
   }
@@ -115,7 +115,6 @@
   }
   
   .updateGigContainer .rightContainer select{
-    margin-bottom: 32px;
     height: 40px;
     width: 200px;
     border-radius: 4px;
@@ -186,6 +185,8 @@
     border-radius: 4px !important;
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
   }
+
+  .updateGigContainer
   
   /*tab 2*/
   .outerTab{
@@ -252,7 +253,7 @@
     font-size: 16px;
     margin-bottom: 0 !important;
     border-radius: 0 !important;
-    height: auto !important;
+    height: 100% !important;
     width: 100%;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
