add custom functions to controller

--- a/public/assests/css/manageOrders.styles.css
+++ b/public/assests/css/manageOrders.styles.css
@@ -30,8 +30,8 @@ body{
     margin-right: 32px;
     margin-left: 32px;
     padding: 0px 16px;
-    display: flex;
-    justify-content: space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
     margin-top: 32px;
     height: calc(100vh - 180px);
 }  
